Add new Tests for StudentService

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,10 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
   server.port=8090
 server.error.include-message=always
+
+info.app.name=New Channel Student Management System
+info.app.description=New Channel Student Management System
+info.app.version=1.0.0
+info.app.company=New Channel International Educational Group
+#management.endpoint.health.show-details=always
+management.endpoints.web.exposure.include=health, info, prometheus
